# pto-wsp

./: .ASCEND_SERVER.toml.example  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CMakeLists.txt  LICENSE  LICENSE-3RD-PARTY.md  README.md  package-lock.json  pyproject.toml
.claude/skills/codex/: SKILL.md
.claude/skills/e2e-example/: SKILL.md
.codex/: README.md
.codex/skills/codex/: SKILL.md
.codex/skills/e2e-example/: SKILL.md
.codex/skills/planning-with-files/: SKILL.md  examples.md  reference.md
docs/: README.md  analysis.md  comments.md  deprecated-apis.md  features.md  implementation.md  release_review.md  requirements.md  spec.md  task_plan.md  tutorial.md  v9_design_review.md  v9_design_review_v2.md  v9_improvement_tasks.md
docs/archive/: comments.md
docs/archive/v1/: analysis.md  spec.md
docs/archive/v2/: analysis.md  spec.md
docs/archive/v3/: analysis.md  plan.md  spec.md
docs/archive/v4/: analysis.md  comments.md  spec.md
docs/archive/v5/: analysis.md  comments.md  spec.md
docs/archive/v6/: analysis.md  comments.md  spec.md
docs/archive/v7/: analysis-v2.md  analysis.md  comments.md  runtime-extension-spec-v2.md  spec.md
docs/archive/v8/: analysis.md  comments.md  design-questions.md  redundancy.md  report_cn.md  spec.md
docs/design/: backend-arch.md  codegen-ast.md  concurrency.md  concurrent-mechanism.md  ir-design.md  npu-backend_support.md  npu-design.md  on-device-task-gen.md  type-system.md
docs/examples/: deepseek_lightning_indexer.pto
docs/examples/flashinfer_decode/: CMakeLists.txt  README.md
docs/examples/flashinfer_decode/include/: decode_attention.hpp  runtime.hpp
docs/examples/flashinfer_decode/src/: host_planning.cpp
docs/examples/flashinfer_decode/tests/: test_decode.cpp
docs/future/: README.md  pto-runtime-task-buffer.md  pto_runtime_analysis.md  pto_runtime_gaps.md  pto_runtime_integration.md  v10_analysis.md  v10_features.md  v10_implementation.md  v10_plan.md  v10_pto_runtime_interface.md  v10_spec.md  v10_tracker.md
docs/future-htp/: README.md  analysis.md  examples.md  features.md  implementations.md
docs/future-htp/feats/: 01_extensibility.md  02_dialects_wsp.md  03_dialects_csp.md  04_intrinsics.md  05_layout.md  06_passes_pipelines.md  07_backends_artifacts.md  08_binding_runtime.md  09_debuggability.md
docs/future-htp/impls/: 01_ir_model.md  02_pass_manager.md  03_capability_solver.md  04_artifact_manifest.md  05_backend_pto.md  06_backend_aie.md  07_binding_interface.md  08_testing.md  09_transition_plan.md
docs/plans/: 2026-02-02-pto-runtime-integration-v10.md
docs/reference/: 01_flashinfer.md  02_gpu_patterns.md  03_pl_design.md  04_pto_isa.md  05_ascend_hw.md  06_megakernels.md  07_cuda_streams_workstealing.md  08_tvm.md  09_sparsetir.md  10_relax.md  11_flashinfer.md  12_pypto.md  13_pto_isa_lh.md  14_pto_isa_wc.md  15_allo.md  16_dato.md  17_dam.md  18_pypto.md  19_arknife.md  20_axe.md  21_tl_spatial_compiler.md
docs/reference/pto-wsp/: README.md
docs/research/: backend_code_reuse_research.md  concise_workload_design.md  context_manager_research.md  cpp_restructuring_plan.md  extended_primitives_research.md  extensible_ir_research.md  hierarchical_model_research.md  jit_design_research.md  linear_layout.md  npu_function_design.md  task_graph_design_research.md  tilelang_syntax_research.md  type_system_research.md
examples/: CMakeLists.txt  README.md
examples/_harness/: harness.py
examples/attention/: Makefile  README.md  attention_example.py  golden.py  pto_rt_impl.py
examples/bgemm/: Makefile  README.md  bgemm_example.py  golden.py  pto_rt_impl.py
examples/csp_pipeline/: Makefile  README.md  csp_pipeline_example.py  golden.py  pto_rt_impl.py
examples/deepseek_lightning_indexer/: Makefile  README.md  deepseek_lightning_indexer.py  deepseek_lightning_indexer_example.py  golden.py  pto_rt_impl.py  topk8_sort32_body.cpp
examples/deepseek_v3/: Makefile  README.md  deepseek_v3_example.py  golden.py  pto_wsp_impl.py
examples/e2e_rmsnorm/: Makefile  README.md  e2e_rmsnorm_example.py  golden.py  pto_rt_impl.py
examples/flashinfer_decode/: Makefile  README.md  flashinfer_decode_attention.py  flashinfer_decode_example.py  golden.py  pto_wsp_impl.py
examples/llama/: Makefile  README.md  golden.py  llama_example.py  pto_wsp_impl.py
examples/softmax/: Makefile  README.md  golden.py  pto_rt_impl.py  softmax_example.py
examples/tensor_data/: Makefile  README.md  golden.py  pto_wsp_impl.py  tensor_data_example.py
examples/validated_matmul/: README.md  golden.py  pto_rt_impl.py  validated_matmul_example.py
include/pto/wsp/ir/: axis.hpp  (+14 more)
python/pto_wsp/: __init__.py  auto_schedule.py  builder.py  csp.py  errors.py  ir_bridge.py  ir_passes.py  kernel.py  kernel_legacy.py  linear_layout.py  npu.py  p_namespace.py  primitives.py  program.py  pto_runtime_abi.py  pto_runtime_bridge.py  pto_runtime_runner.py  ptoisa_jit.py  scalar_expr.py  schedule.py  spatial.py  type_checker.py  types.py  workload.py
references/research/: README.md
scripts/: ascend_remote.py  run_all_tests.sh
src/python/: pto_codegen.cpp  pto_ir_bindings.cpp
tests/: CMakeLists.txt  test_backend.cpp  test_codegen_abi.cpp  test_codegen_cond.py  test_codegen_cspt_pipeline.py  test_codegen_custom_kernel_cpp.py  test_codegen_dynamic_axes.py  test_codegen_dynamic_symbols.py  test_codegen_execute_basic.py  test_codegen_ragged_axis.py  test_codegen_scalar_expr_eval.py  test_codegen_schedule_dispatch_window.py  test_codegen_select_sparse.py  test_codegen_slots_tensor_predicate.py  test_cpp_codegen_ast.cpp  test_e2e.py  test_examples_run.py  test_graph.cpp  test_integration.py  test_ir.cpp  test_kernel_tracing_codegen.py  test_linear_layout.py  test_npu_codegen_emit.py  test_npu_codegen_schedule_preserved.py  test_pto_runtime_a2a3_e2e.py  test_pto_runtime_a2a3sim_e2e.py  test_pto_runtime_abi.py  test_pto_runtime_bridge_import.py  test_pto_runtime_codegen_emit.py  test_ptoisa_kernel_jit.py  test_pybind_integration.py  test_python_frontend.py  test_tensor_index_tracking.py
tests/assets/: cpp_body_kernel_snippet.cpp
(+57 files in other folders)
